--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <p>Krijg uw testresultaat binnen 20 minuten!</p>
               <button class="cta-dark-blue cta-margin"> 
                 Bekijk de app 
-                <img src="./assets/icons/arrow.svg" alt="arrow button" />
+                <img src="assets/icons/arrow.svg" alt="arrow button" />
               </button>
         </section>
         <section class="pages-information">
