--- a/informatie.html
+++ b/informatie.html
@@ -49,7 +49,7 @@
         <section class="home">
             <h1>Hoe werkt het?</h1>
             <p class="paragraph-margin-top">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Voor degene die nog niet weten hoe het werkt, hieronder de stappen uitgelegd:
             </p>
         </section>
     </main>
