--- a/overons.html
+++ b/overons.html
@@ -49,7 +49,10 @@
         <section class="home">
             <h1>Over ons</h1>
             <p class="paragraph-margin-top">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Testassistent is een project dat door middel van een samenwerking tussen de Hogeschool van
+                Amsterdam en het Microbiologisch Streeklab in Haarlem is opgezet. Het doe was om het uitvoeren
+                en interpreteren van de covid-19 antigeentest (a.k.a. de zelftest) zo eenvoudig mogelijk is. De
+                meewerkende partijen zijn:
             </p>
         </section>
     </main>
