--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <p class="p-large margin-top">Krijg uw testresultaat binnen 20 minuten!</p>
               <button class="cta-dark-blue cta-margin"> 
                 Bekijk de app 
-                <img src="assets/icons/arrow.svg" alt="arrow button" />
+                <svg width="28" height="14" viewBox="0 0 28 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.2265 8.33333L18.7865 11.7867L20.6665 13.6667L27.3332 6.99999L20.6665 0.333328L18.7865 2.21333L22.2265 5.66666H0.666504V8.33333H22.2265Z" fill="white"/></svg>
               </button>
             </div>
             <div class="hero-image">
