Home pagina verbeterd en basisopzet voor informatiepagina
Ik heb de home pagina verbeterd en een basisopzet voor  de informatiepagina gemaakt.

--- a/informatie.html
+++ b/informatie.html
@@ -46,11 +46,46 @@
         </nav>
     </header>
     <main>
-        <section class="home">
+        <section class="information">
             <h1>Hoe werkt het?</h1>
             <p class="paragraph-margin-top">
                 Voor degene die nog niet weten hoe het werkt, hieronder de stappen uitgelegd:
             </p>
+        </section>
+        <section class="instruction">
+            <div class="instruction-first">
+                <h2>Stap 1</h2>
+                <p>
+                    Dien je klachten in. Hier word de gebruiker aan de hand van een eenvoudig 
+                    menu gevraagd om zijn/haar klachten te selecteren.
+                </p>
+            </div>
+            <div class="instruction-second">
+                <h2>Stap 2</h2>
+                <p>
+                    Scan de barcode van de test. Dit is puur om de juiste instructies van het 
+                    merk test te kunnen aanbieden. Je kunt kiezen om de instructies op verschillende 
+                    manieren te krijgen: Schematisch, tekstueel of aan de hand van afbeeldingen.
+                </p>
+            </div>
+            <div class="instruction-third">
+                <h2>Stap 3</h2>
+                <p>
+                    Wacht 15 minuten. De test moet 15 minuten blijven staan tot de test pas afgelezen 
+                    kan worden (dit is essentieel en hier gaat het vaak fout, omdat de test ook niet 
+                    langer dan 30 minuten moet liggen voor het geïnterpreteerd wordt). 
+                </p>
+            </div>
+            <div class="instruction-fourth">
+                <h2>Stap 4</h2>
+                <p>
+                    Maak een foto en ontvang je uitslag & advies. Hier maakt de gebruiker een foto die 
+                    door het algoritme wordt beoordeeld en de uitslag volgt binnen 20 seconden. Samen 
+                    met de uitslag krijgt de gebruiker hier ook advies over wat hij/zij moet doen qua 
+                    maatregelen en/of quarantaine. En indien de test positief is wordt de gebruiker 
+                    direct door gewezen naar de site van de GGD om een PCR test in te plannen.
+                </p>
+            </div>
         </section>
     </main>
     <footer>
