--- a/informatie.html
+++ b/informatie.html
@@ -12,7 +12,7 @@
 	<body>
 		<header class="primary-header flex">
 			<a href="index.html">
-				<img class="logo-testasssistent" src="assets/logo testassistent.svg" alt="logo">
+				<img class="logo" src="assets/logo testassistent.svg" alt="logo">
 			</a>        
 			<nav>
 					<ul class="primary-navigation flex " data-visible="false">
@@ -73,7 +73,7 @@
 								</p>
 						</div>
 						<div class="instruction-second">
-								<img class="image-instruction-first" src="assets/step1.jpg" alt="">
+								<img class="image-instruction-first" src="assets/step2.jpg" alt="">
 								<h3 class="margin-top-small">Stap 2</h3>
 								<h4 class="gray-header">Scan de barcode van de test</h4>
 								<p class="margin-top-small">
@@ -83,7 +83,7 @@
 								</p>
 						</div>
 						<div class="instruction-third">
-								<img class="image-instruction-first" src="assets/step1.jpg" alt="">
+								<img class="image-instruction-first" src="assets/step3.jpg" alt="">
 								<h3 class="margin-top-small">Stap 3</h3>
 								<h4 class="gray-header">Wacht 15 minuten</h4>
 								<p class="margin-top-small">
@@ -93,7 +93,7 @@
 								</p>
 						</div>
 						<div class="instruction-fourth">
-								<img class="image-instruction-first" src="assets/step1.jpg" alt="">
+								<img class="image-instruction-first" src="assets/step4.jpg" alt="">
 								<h3 class="margin-top-small">Stap 4</h3>
 								<h4 class="gray-header">Maak een foto en ontvang je uitslag & advies</h4>
 								<p class="margin-top-small">
