--- a/overons.html
+++ b/overons.html
@@ -12,7 +12,7 @@
   <body>
     <header class="primary-header flex">
       <a href="index.html">
-        <img class="logo-testasssistent" src="assets/logo testassistent.svg" alt="logo">
+        <img class="logo" src="assets/logo testassistent.svg" alt="logo">
       </a>
       <nav>
           <ul class="primary-navigation flex " data-visible="false">
@@ -57,6 +57,7 @@
 								en interpreteren van de covid-19 antigeentest (a.k.a. de zelftest) zo eenvoudig mogelijk is. De
 								meewerkende partijen zijn:
               </p>
+							<img src="assets/aboutus-image.jpg" alt="">
           </section>
 					<section>
 						<h2>Microbiologisch Streeklab Haarlem</h2>
