--- a/privacy.html
+++ b/privacy.html
@@ -12,7 +12,7 @@
   <body>
     <header class="primary-header flex">
       <a href="index.html">
-        <img class="logo-testasssistent" src="assets/logo testassistent.svg" alt="logo">
+        <img class="logo" src="assets/logo testassistent.svg" alt="logo">
       </a>
       <nav>
           <ul class="primary-navigation flex " data-visible="false">
@@ -53,10 +53,13 @@
             <div class="privacy-information">
               <h1>Privacy</h1>
               <p class="p-large paragraph-margin-top">
-                Het waarborgen van de privacy van onze gebruikers van de TestAssistent app is een belangrijke taak voor ons. Daarom beschrijven we in onze privacybeleid welke informatie we wel of niet verzamelen en hoe we deze informatie gebruiken.
+                Het waarborgen van de privacy van onze gebruikers van de TestAssistent app is een belangrijke taak voor ons. 
+              </p>
+              <p class="p-large margin-top-small">
+                Dat is de reden waarom we in onze privacybeleid laten zien welke informatie we wel of niet verzamelen.
               </p>
             </div>
-              <img src="assets/privacy-image.png" alt="">
+              <img class="privacy-image" src="assets/privacy-image.png" alt="">
           </section>
           <section>
             <h2>Gegevens</h2>
