--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="primary-header flex">
       <a href="index.html">
-        <img class="logo-testasssistent" src="assets/logo testassistent.svg" alt="logo">
+        <img class="logo" src="assets/logo testassistent.svg" alt="logo">
       </a>
       <nav>
           <ul class="primary-navigation flex " data-visible="false">
