Privacy pagina af
Privacy pagina afgemaakt. Question icoontje gemaakt en de gegevens en de vragen sections gecodeerd.

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 Nog vragen? Schrijf gewoon een bericht!
               </p>
           </section>
-          <section class="gegevens">
+          <section class="contact-gegevens">
             <h2>Gegevens</h2>
             <p>
               Vul het formulier in en ons team komt bij 
