--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
               </h1>
               <p class="p-large margin-top">
                 Ervaar jij problemen bij het nemen van een zelftest? Gebruik de zelf-test app om gemakkelijk de zelftest te nemen.
+                <br><br>
+                Krijg uw testresultaat binnen 20 minuten!
               </p>
-              <p class="p-large margin-top-small">Krijg uw testresultaat binnen 20 minuten!</p>
               <button>
                 <a class="cta-dark-blue cta-margin" href="#">
                 Bekijk de app 
