--- a/overons.html
+++ b/overons.html
@@ -63,14 +63,26 @@
 						<h2>Microbiologisch Streeklab Haarlem</h2>
 						<p>
 							De opdrachtgever voor dit project is Microbiologisch Streeklab Haarlem. Het Streeklab is een
-kenniscentrum voor infectieziekten, infectiepreventie en microbiologische diagnostiek. De
-opdrachtgever wordt door meerdere gezondheidsinstellingen en wetenschappelijke partners ingezet
-om te kijken of een patiënt een infectie heeft. Niet alleen onderzoekt het Streeklab een infectie, zij
-geven ook advies over een effectieve behandeling of maatregelen om verspreiding van een virus
-tegen te gaan. Ook nu met de coronapandemie speelt het Streeklab een belangrijke leidende rol in
-het opschalen van de corona diagnostiek, die verzorgd werd voor onder andere GGD&#8217;s, ziekenhuizen,
-huisartsen en verpleeghuizen.
-(Voor verder informatie kijk op hun site: https://streeklabhaarlem.nl/)
+							kenniscentrum voor infectieziekten, infectiepreventie en microbiologische diagnostiek. De
+							opdrachtgever wordt door meerdere gezondheidsinstellingen en wetenschappelijke partners ingezet
+							om te kijken of een patiënt een infectie heeft. Niet alleen onderzoekt het Streeklab een infectie, zij
+							geven ook advies over een effectieve behandeling of maatregelen om verspreiding van een virus
+							tegen te gaan. Ook nu met de coronapandemie speelt het Streeklab een belangrijke leidende rol in
+							het opschalen van de corona diagnostiek, die verzorgd werd voor onder andere GGD&#8217;s, ziekenhuizen,
+							huisartsen en verpleeghuizen.
+							<br><br>
+							(Voor verder informatie kijk op hun site: https://streeklabhaarlem.nl/)
+						</p>
+					</section>
+					<section>
+						<h2>Centre of Expertise Applied AI</h2>
+						<p>
+							Dit is het centrum van de Hogeschool van Amsterdam waar onderzoek wordt gedaan naar
+							Kunstmatige Intelligentie. Hier is het Smart Asset Management Lab bezig geweest met het
+							ontwikkelen van het algoritme dat aan de hand van de ingestuurde foto van de zelftest de uitslag
+							kan bepalen.
+							<br><br>
+							(voor verdere informatie: https://www.hva.nl/appliedai
 						</p>
 					</section>
       </main>
