--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,7 @@
               Vul het formulier in en ons team komt bij 
               je terug!
             </p>
+            <img src="assets/contact-image.jpg" alt="">
           </section>
           <form action="">
           </form>
