--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 Zelftest
               </h1>
               <p class="p-large margin-top">
-                Ervaar jij problemen bij het nemen van een zelftest? Gebruik de zelf-test app om gemakkelijk de zelftest te nemen.
+                Ervaar jij problemen bij het uitvoeren van een zelftest?? Gebruik de zelf-test app om gemakkelijk de zelftest te nemen.
                 <br><br>
                 Krijg uw testresultaat binnen 20 minuten!
               </p>
