--- a/informatie.html
+++ b/informatie.html
@@ -58,7 +58,7 @@
 								Volg de stappen hieronder!
 							</p>
 						</div>
-						<img class="information-image" src="assets/information-image.png" alt="Een zelftest uit de verpakking met een staafje">
+						<img class="information-image" src="assets/information-image.jpg" alt="Een zelftest uit de verpakking met een staafje">
 				</section>
 				<section class="instruction">
 						<h2 class="margin-bottom">Instructies</h2>
