--- a/overons.html
+++ b/overons.html
@@ -49,41 +49,45 @@
       </nav>
     </header>
       <main>
-          <section class="overons">
+          <section class="about-us">
+            <div class="about-us-information">
               <h1>Over ons</h1>
               <p class="p-large paragraph-margin-top">
                 Testassistent is een project dat door middel van een samenwerking tussen de Hogeschool van
 								Amsterdam en het Microbiologisch Streeklab in Haarlem is opgezet. Het doel was om het uitvoeren
-								en interpreteren van de covid-19 antigeentest (a.k.a. de zelftest) zo eenvoudig mogelijk is. De
-								meewerkende partijen zijn:
+								en interpreteren van de covid-19 antigeentest (a.k.a. de zelftest) zo eenvoudig mogelijk is.
               </p>
-							<img src="assets/aboutus-image.jpg" alt="">
+            </div>
+							<img class="about-us-image" src="assets/aboutus-image.jpg" alt="">
           </section>
 					<section>
-						<h2>Microbiologisch Streeklab Haarlem</h2>
-						<p>
-							De opdrachtgever voor dit project is Microbiologisch Streeklab Haarlem. Het Streeklab is een
-							kenniscentrum voor infectieziekten, infectiepreventie en microbiologische diagnostiek. De
-							opdrachtgever wordt door meerdere gezondheidsinstellingen en wetenschappelijke partners ingezet
-							om te kijken of een patiënt een infectie heeft. Niet alleen onderzoekt het Streeklab een infectie, zij
-							geven ook advies over een effectieve behandeling of maatregelen om verspreiding van een virus
-							tegen te gaan. Ook nu met de coronapandemie speelt het Streeklab een belangrijke leidende rol in
-							het opschalen van de corona diagnostiek, die verzorgd werd voor onder andere GGD&#8217;s, ziekenhuizen,
-							huisartsen en verpleeghuizen.
-							<br><br>
-							(Voor verder informatie kijk op hun site: https://streeklabhaarlem.nl/)
-						</p>
-					</section>
-					<section>
-						<h2>Centre of Expertise Applied AI</h2>
-						<p>
-							Dit is het centrum van de Hogeschool van Amsterdam waar onderzoek wordt gedaan naar
-							Kunstmatige Intelligentie. Hier is het Smart Asset Management Lab bezig geweest met het
-							ontwikkelen van het algoritme dat aan de hand van de ingestuurde foto van de zelftest de uitslag
-							kan bepalen.
-							<br><br>
-							(voor verdere informatie: https://www.hva.nl/appliedai
-						</p>
+            <h2>De meewerkende partijen zijn:</h2>
+            <div>
+              <h3>Microbiologisch Streeklab Haarlem</h3>
+              <p>
+                De opdrachtgever voor dit project is Microbiologisch Streeklab Haarlem. Het Streeklab is een
+                kenniscentrum voor infectieziekten, infectiepreventie en microbiologische diagnostiek. De
+                opdrachtgever wordt door meerdere gezondheidsinstellingen en wetenschappelijke partners ingezet
+                om te kijken of een patiënt een infectie heeft. Niet alleen onderzoekt het Streeklab een infectie, zij
+                geven ook advies over een effectieve behandeling of maatregelen om verspreiding van een virus
+                tegen te gaan. Ook nu met de coronapandemie speelt het Streeklab een belangrijke leidende rol in
+                het opschalen van de corona diagnostiek, die verzorgd werd voor onder andere GGD&#8217;s, ziekenhuizen,
+                huisartsen en verpleeghuizen.
+                <br><br>
+                (Voor verder informatie kijk op hun site: <a href="https://streeklabhaarlem.nl/">https://streeklabhaarlem.nl/</a>)
+              </p>
+            </div>
+            <div>
+              <h3>Centre of Expertise Applied AI</h3>
+              <p>
+                Dit is het centrum van de Hogeschool van Amsterdam waar onderzoek wordt gedaan naar
+                Kunstmatige Intelligentie. Hier is het Smart Asset Management Lab bezig geweest met het
+                ontwikkelen van het algoritme dat aan de hand van de ingestuurde foto van de zelftest de uitslag
+                kan bepalen.
+                <br><br>
+                (voor verdere informatie: <a href="https://www.hva.nl/appliedai">https://www.hva.nl/appliedai</a>)
+              </p>
+            </div>
 					</section>
       </main>
       <footer>
