--- a/contact.html
+++ b/contact.html
@@ -54,14 +54,14 @@
               <p class="p-large paragraph-margin-top">
                 Nog vragen? Schrijf gewoon een bericht!
               </p>
+              <img src="assets/contact-image.jpg" alt="">
           </section>
           <section class="contact-gegevens">
             <h2>Gegevens</h2>
             <p>
               Vul het formulier in en ons team komt bij 
-              je terug!
+              u terug!
             </p>
-            <img src="assets/contact-image.jpg" alt="">
           </section>
           <form action="">
           </form>
