--- a/overons.html
+++ b/overons.html
@@ -60,9 +60,9 @@
             </div>
 							<img class="about-us-image" src="assets/aboutus-image.jpg" alt="">
           </section>
-					<section>
+					<section class="partijen">
             <h2>De meewerkende partijen zijn:</h2>
-            <div>
+            <div class="streeklab">
               <h3>Microbiologisch Streeklab Haarlem</h3>
               <p>
                 De opdrachtgever voor dit project is Microbiologisch Streeklab Haarlem. Het Streeklab is een
@@ -77,7 +77,8 @@
                 (Voor verder informatie kijk op hun site: <a href="https://streeklabhaarlem.nl/">https://streeklabhaarlem.nl/</a>)
               </p>
             </div>
-            <div>
+            <img class="logo-streeklab" src="assets/logo-streeklab.png" alt="">
+            <div class="centre">
               <h3>Centre of Expertise Applied AI</h3>
               <p>
                 Dit is het centrum van de Hogeschool van Amsterdam waar onderzoek wordt gedaan naar
@@ -88,6 +89,7 @@
                 (voor verdere informatie: <a href="https://www.hva.nl/appliedai">https://www.hva.nl/appliedai</a>)
               </p>
             </div>
+            <img class="centre-image" src="assets/centre-image.png" alt="">
 					</section>
       </main>
       <footer>
