--- a/contact.html
+++ b/contact.html
@@ -49,22 +49,49 @@
       </nav>
     </header>
       <main>
-          <section class="contact-information">
+          <section class="contact">
               <h1>Contact</h1>
-              <p class="p-large paragraph-margin-top">
-                Nog vragen? Schrijf gewoon een bericht!
+              <p class="p-large margin-top">
+                Nog vragen? Schrijf een bericht naar ons!
               </p>
-              <img src="assets/contact-image.jpg" alt="">
           </section>
-          <section class="contact-gegevens">
-            <h2>Gegevens</h2>
-            <p>
-              Vul het formulier in en ons team komt bij 
-              u terug!
-            </p>
-          </section>
-          <form action="">
+          <section class="contact-inhoud">
+            <div class="contact-gegevens">
+              <h2>Gegevens</h2>
+              <p class="margin-top-small">
+                Vul het formulier in en ons team komt bij 
+                u terug!
+              </p>
+              <div class="flex-phone-number margin-top">
+                <svg class="svg-small white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 199.68 200"><g><path d="M194,143.81c-8.5-9-17.48-18-28.29-28.37A20.05,20.05,0,0,0,142,112.56a51.8,51.8,0,0,0-9.14,7.29l-.17.15c-2.27,2.12-4.51,4.4-6.67,6.59l-1.24,1.26c-.74.77-1.51,1.56-2.28,2.34-.52-.28-1-.55-1.56-.85-2.07-1.11-4-2.12-5.74-3.26a133.72,133.72,0,0,1-25.93-21.83C82.56,97.13,75,88.41,69.74,77.74l-.16-.22.26-.22L72.2,75l2.65-2.63c3.35-3.33,6.8-6.76,10-10.35a20.57,20.57,0,0,0-.15-27.71C75.09,24,66.18,15,57.42,6.8,47.89-2.13,36.7-2.27,26.71,6.39c-4.13,3.54-8,7.55-11.74,11.42l-1.4,1.46c-1.31,1.36-2.65,2.74-4,4.11A32.21,32.21,0,0,0,1,39.84C.68,41.57.48,43.35.32,44.92.24,45.45.17,46,.11,46.55L0,47.22l0,3.11,0,.25c.11.87.21,1.76.31,2.63l.12,1c.27,2.32.54,4.72,1,7.1a119.24,119.24,0,0,0,11.33,31.5,216.9,216.9,0,0,0,32.86,47.64A217.25,217.25,0,0,0,90,177.54c15.56,9.82,29.22,16.07,43,19.67a102,102,0,0,0,13.49,2.48c1.52.14,3.64.32,6,.31a36.72,36.72,0,0,0,4.91-.34c7.66-1,13.76-3.82,18.65-8.52,7.63-7.38,13.27-13.21,18.27-18.9a21.45,21.45,0,0,0,5.41-14.13A20.8,20.8,0,0,0,194,143.81Zm-26.91,33.82c-4.13,4.37-9.21,6.41-16,6.41h-.31a67.36,67.36,0,0,1-19.63-4.13c-27.87-10.3-52.74-27.42-73.95-50.88A189,189,0,0,1,27.56,86.35C22.41,76,19.19,67.17,17.39,58.58c-1.22-5.86-2-12.1.26-17.95a24.58,24.58,0,0,1,4.71-7.26c3.69-4,7.66-7.88,11.17-11.3l3-2.87c2-1.95,3.8-2.94,5.45-2.94s3.59,1,5.61,3C55.27,27,63.08,34.81,70.66,42.4a18.18,18.18,0,0,1,1.49,1.65c2.52,3,2.5,5.6-.05,8.27-4.85,5.09-10.2,10.25-14.48,14.4h0c-5.52,5.39-6.27,9.35-3.09,16.29,5.81,12.84,14.76,23.35,21.89,31.06a147,147,0,0,0,33.05,27.35c2.11,1.25,4.33,2.39,6.46,3.48l1.87,1c4.94,2.52,9.7,1.75,13.77-2.24,2.25-2.22,4.53-4.49,6.75-6.71L140.2,135l5.48-5.48a25.1,25.1,0,0,1,2-1.86c2.8-2.2,5.51-2.1,8.07.3,1.65,1.5,3.25,3.12,4.8,4.68l19,19c.65.66,1.41,1.44,2.08,2.25l.12.13a5.9,5.9,0,0,1,.15,8.14l-.08.09a34.69,34.69,0,0,1-2.45,2.7l-4.7,4.78C172.23,172.28,169.59,175,167.05,177.63Z"/></g></svg>
+                <p>023 530 7800</p>
+              </div>
+              <div class="flex-email">
+                <svg class="svg-small white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 227.47 200"><g><path d="M193.67,0H33.79C15.16,0,0,17.13,0,38.18V161.82C0,182.87,15.16,200,33.79,200H193.67c18.64,0,33.8-17.13,33.8-38.18V38.18C227.47,17.13,212.31,0,193.67,0Zm19.47,161.82c0,12.21-8.73,22.14-19.47,22.14H33.79c-10.74,0-19.46-9.93-19.46-22.14V38.18a24.2,24.2,0,0,1,1.48-8.49l1-.87.49.55c.92,1,2.11,2.36,3.41,3.8L31.24,45c5.38,5.94,23.14,24,52.91,53.66l13.38,13.41.45.46c3.14,3.17,6.11,6.17,9.15,9.29,4.75,4.82,8.81,4.82,13.59,0l9.89-10.09,4.34-4.32,9.52-9.75c.28-.26.51-.48.71-.69l4.52-4.61,38.39-39c1.9-1.94,7.64-8.21,13.19-14.28l2.41-2.63c2.74-3,5.35-5.88,7-7.64l1,.92a24.28,24.28,0,0,1,1.49,8.46ZM33.79,16H193.67a17.66,17.66,0,0,1,2.81.23l1,.85c-9.45,9.64-21.59,22.32-33.33,34.6l-1.6,1.67c-24.23,25.37-33.87,35.21-37.46,38.92l-.37.38c-4.94,5-8.4,8.54-10.87,11L54.93,44c-2.11-2.1-6.6-6.89-12-12.83l-2.21-2.38c-4.48-4.87-8.76-9.48-11.4-12.16A17.15,17.15,0,0,1,33.79,16Z"/></g></svg>
+                <p>rvb@streeklabhaarlem.nl</p>
+              </div>
+              <div class="flex-adress">
+                <svg class="svg-small white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 161.44 200"><path d="M153,45.37C141.79,22.68,123.36,8.09,98.18,2A84.56,84.56,0,0,0,89.79.57l-1-.14C87.88.3,87,.18,86,0L75.34,0,73,.29c-1.5.19-3,.4-4.58.63A80.78,80.78,0,0,0,31.91,16.58,79.45,79.45,0,0,0,5.25,52.43a78.55,78.55,0,0,0,.33,57.3C11.06,124,19.12,138,30.21,152.43c12,15.64,26.67,30.44,44.89,45.22A9,9,0,0,0,80.66,200h.23a8.49,8.49,0,0,0,5.57-2.51c2.11-1.88,4.22-3.73,6.35-5.58,6.26-5.52,12.73-11.21,18.85-17.27,18.71-18.58,32.44-38.07,42-59.6a85.09,85.09,0,0,0,7.79-34.69A78.34,78.34,0,0,0,153,45.37Zm-12.85,61.85-.56,1.18c-9.39,21-23.46,40.45-43,59.38-3.72,3.62-7.53,7.05-11.56,10.66l-.15.13-2.22,2-2,1.77c-1-.88-2-1.75-3-2.6l-1-.86c-2.8-2.48-5.46-4.81-8.1-7.26A217.84,217.84,0,0,1,35.27,133c-8.13-12.23-13.48-22.85-16.81-33.4A62.37,62.37,0,0,1,18,63,63.69,63.69,0,0,1,46,25.59a62.25,62.25,0,0,1,34.05-10.1h.09a67.55,67.55,0,0,1,7.4.41c18,2,32.93,10.31,44.41,24.75a62.51,62.51,0,0,1,12.34,26.27A67.13,67.13,0,0,1,140.14,107.22Z"/><path d="M114.61,44.35A48.05,48.05,0,0,0,80.76,30.07h-.25C54.57,30.07,33.24,51.42,33,77.65a47.08,47.08,0,0,0,13.63,33.54,48.06,48.06,0,0,0,34,14.43h.28c26,0,47.34-21.35,47.52-47.58A47.59,47.59,0,0,0,114.61,44.35Zm-1.13,34a33.09,33.09,0,0,1-32.69,32.71H80.5a32.89,32.89,0,0,1-23.16-9.62A33.26,33.26,0,0,1,50,90.61a32.44,32.44,0,0,1-2.52-12.75A33.42,33.42,0,0,1,80.59,44.6h.17a33.24,33.24,0,0,1,32.72,33.78Z"/></svg>
+                <p>Boerhaavelaan 26 2035 RC Haarlem</p>
+              </div>
+              <img class="selftest-image" src="assets/selftest-image.svg" alt="">
+            </div>
+          <form action="#" method="POST">
+            <Label for="name">Naam:</Label>
+            <input type="text" id="name">
+            <Label for="surname">Achternaam:</Label>
+            <input type="text" id="surname">
+            <Label for="e-mail">E-mail:</Label>
+            <input type="email" id="email">
+            <Label for="subject">Onderwerp:</Label>
+            <input type="text" id="subject">
+            <Label for="message">Bericht:</Label>
+            <textarea name="message" id="message" cols="50" rows="25"></textarea>
+            <button class="cta-submit cta-margin"> 
+              <a href="#">Verstuur</a>
+            </button>
           </form>
+        </section>
       </main>
       <footer>
         <section class="footer-contact-information">
