--- a/overons.html
+++ b/overons.html
@@ -52,7 +52,7 @@
           <section class="about-us">
             <div class="about-us-information">
               <h1>Over ons</h1>
-              <p class="p-large paragraph-margin-top">
+              <p class="p-large margin">
                 Testassistent is een project dat door middel van een samenwerking tussen de Hogeschool van
 								Amsterdam en het Microbiologisch Streeklab in Haarlem is opgezet. Het doel was om het uitvoeren
 								en interpreteren van de covid-19 antigeentest (a.k.a. de zelftest) zo eenvoudig mogelijk is.
@@ -64,7 +64,7 @@
             <h2>De meewerkende partijen zijn:</h2>
             <div class="streeklab">
               <h3>Microbiologisch Streeklab Haarlem</h3>
-              <p>
+              <p class="margin-top-small">
                 De opdrachtgever voor dit project is Microbiologisch Streeklab Haarlem. Het Streeklab is een
                 kenniscentrum voor infectieziekten, infectiepreventie en microbiologische diagnostiek. De
                 opdrachtgever wordt door meerdere gezondheidsinstellingen en wetenschappelijke partners ingezet
@@ -80,7 +80,7 @@
             <img class="logo-streeklab" src="assets/logo-streeklab.png" alt="">
             <div class="centre">
               <h3>Centre of Expertise Applied AI</h3>
-              <p>
+              <p class="margin-top-small">
                 Dit is het centrum van de Hogeschool van Amsterdam waar onderzoek wordt gedaan naar
                 Kunstmatige Intelligentie. Hier is het Smart Asset Management Lab bezig geweest met het
                 ontwikkelen van het algoritme dat aan de hand van de ingestuurde foto van de zelftest de uitslag
