--- a/privacy.html
+++ b/privacy.html
@@ -52,7 +52,7 @@
           <section class="privacy">
             <div class="privacy-information">
               <h1>Privacy</h1>
-              <p class="p-large paragraph-margin-top">
+              <p class="p-large margin-top">
                 Het waarborgen van de privacy van onze gebruikers van de TestAssistent app is een belangrijke taak voor ons. 
                 <br><br>
                 Dat is de reden waarom we in onze privacybeleid laten zien welke informatie we wel of niet verzamelen.
