--- a/contact.html
+++ b/contact.html
@@ -78,15 +78,15 @@
             </div>
           <form action="#" method="POST">
             <Label for="name">Naam:</Label>
-            <input type="text" id="name">
+            <input type="text" id="name" required>
             <Label for="surname">Achternaam:</Label>
-            <input type="text" id="surname">
+            <input type="text" id="surname" required>
             <Label for="e-mail">E-mail:</Label>
-            <input type="email" id="email">
+            <input type="email" id="email" required>
             <Label for="subject">Onderwerp:</Label>
-            <input type="text" id="subject">
+            <input type="text" id="subject" required>
             <Label for="message">Bericht:</Label>
-            <textarea name="message" id="message" cols="50" rows="25"></textarea>
+            <textarea name="message" id="message" cols="50" rows="25" required></textarea>
             <button class="cta-submit cta-margin"> 
               <a href="#">Verstuur</a>
             </button>
