margin-top about-us

--- a/overons.html
+++ b/overons.html
@@ -52,7 +52,7 @@
           <section class="about-us">
             <div class="about-us-information">
               <h1>Over ons</h1>
-              <p class="p-large margin">
+              <p class="p-large margin-top">
                 Testassistent is een project dat door middel van een samenwerking tussen de Hogeschool van
 								Amsterdam en het Microbiologisch Streeklab in Haarlem is opgezet. Het doel was om het uitvoeren
 								en interpreteren van de covid-19 antigeentest (a.k.a. de zelftest) zo eenvoudig mogelijk is.
