--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       </a>
       <div class="ham" id="ham">
         <p class="word-menu">Menu</p>
-        <span class="ham_line ham_line1"></span>
-        <span class="ham_line ham_line2"></span>
-        <span class="ham_line ham_line3"></span>
+        <span class="ham-line ham-line1"></span>
+        <span class="ham-line ham-line2"></span>
+        <span class="ham-line ham-line3"></span>
       </div>
       <nav class="menu_wrapper" id="menu_wrapper">
         <ul class="primary-navigation flex">
@@ -143,9 +143,9 @@
       <section class="footer-socials">
           <h3>Social Media</h2>
           <ul class="margin-top-small">
-              <li><a href="#">Instagram</a></li>
-              <li class="margin-top-small"><a href="#">Facebook</a></li>
-              <li class="margin-top-small"><a href="#">LinkedIn</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li class="margin-top-small"><a href="#">Facebook</a></li>
+            <li class="margin-top-small"><a href="#">LinkedIn</a></li>
           </ul>
         </section>
         <section class="footer-menu">
