--- a/informatie.html
+++ b/informatie.html
@@ -16,9 +16,9 @@
 			</a>
 			<div class="ham" id="ham">
 			  <p class="word-menu">Menu</p>
-			  <span class="ham_line ham_line1"></span>
-			  <span class="ham_line ham_line2"></span>
-			  <span class="ham_line ham_line3"></span>
+			  <span class="ham-line ham-line1"></span>
+			  <span class="ham-line ham-line2"></span>
+			  <span class="ham-line ham-line3"></span>
 			</div>
 			<nav class="menu_wrapper" id="menu_wrapper">
 			  <ul class="primary-navigation flex">
@@ -82,9 +82,9 @@
 								<h3 class="margin-top-small">Stap 2</h3>
 								<h4 class="gray-header">Scan de barcode van de test</h4>
 								<p class="margin-top-small">
-										Dit is puur om de juiste instructies van het 
-										merk test te kunnen aanbieden. Je kunt kiezen om de instructies op verschillende 
-										manieren te krijgen: Schematisch, tekstueel of aan de hand van afbeeldingen.
+									Dit is puur om de juiste instructies van het 
+									merk test te kunnen aanbieden. Je kunt kiezen om de instructies op verschillende 
+									manieren te krijgen: Schematisch, tekstueel of aan de hand van afbeeldingen.
 								</p>
 						</div>
 						<div class="instruction-third">
@@ -92,9 +92,9 @@
 								<h3 class="margin-top-small">Stap 3</h3>
 								<h4 class="gray-header">Wacht 15 minuten</h4>
 								<p class="margin-top-small">
-										De test moet 15 minuten blijven staan tot de test pas afgelezen 
-										kan worden (dit is essentieel en hier gaat het vaak fout, omdat de test ook niet 
-										langer dan 30 minuten moet liggen voor het geïnterpreteerd wordt). 
+									De test moet 15 minuten blijven staan tot de test pas afgelezen 
+									kan worden (dit is essentieel en hier gaat het vaak fout, omdat de test ook niet 
+									langer dan 30 minuten moet liggen voor het geïnterpreteerd wordt). 
 								</p>
 						</div>
 						<div class="instruction-fourth">
@@ -102,11 +102,11 @@
 								<h3 class="margin-top-small">Stap 4</h3>
 								<h4 class="gray-header">Maak een foto en ontvang je uitslag & advies</h4>
 								<p class="margin-top-small">
-										Hier maakt de gebruiker een foto die 
-										door het algoritme wordt beoordeeld en de uitslag volgt binnen 20 seconden. Samen 
-										met de uitslag krijgt de gebruiker hier ook advies over wat hij/zij moet doen qua 
-										maatregelen en/of quarantaine. En indien de test positief is wordt de gebruiker 
-										direct door gewezen naar de site van de GGD om een PCR test in te plannen.
+									Hier maakt de gebruiker een foto die 
+									door het algoritme wordt beoordeeld en de uitslag volgt binnen 20 seconden. Samen 
+									met de uitslag krijgt de gebruiker hier ook advies over wat hij/zij moet doen qua 
+									maatregelen en/of quarantaine. En indien de test positief is wordt de gebruiker 
+									direct door gewezen naar de site van de GGD om een PCR test in te plannen.
 								</p>
 						</div>
 				</section>
@@ -130,9 +130,9 @@
 				<section class="footer-socials">
 						<h3>Social Media</h2>
 						<ul class="margin-top-small">
-								<li><a href="#">Instagram</a></li>
-								<li class="margin-top-small"><a href="#">Facebook</a></li>
-								<li class="margin-top-small"><a href="#">LinkedIn</a></li>
+							<li><a href="#">Instagram</a></li>
+							<li class="margin-top-small"><a href="#">Facebook</a></li>
+							<li class="margin-top-small"><a href="#">LinkedIn</a></li>
 						</ul>
 					</section>
 					<section class="footer-menu">
