--- a/informatie.html
+++ b/informatie.html
@@ -69,7 +69,7 @@
 				<section class="instruction">
 						<h2 class="margin-bottom">Instructies</h2>
 						<div class="instruction-first">
-								<img class="image-instruction-first" src="assets/step1.jpg" alt="">
+								<img class="image-instruction" src="assets/step1.jpg" alt="">
 								<h3 class="margin-top-small">Stap 1</h3>
 								<h4 class="gray-header">Dien je klachten in</h4>
 								<p class="margin-top-small">
@@ -78,7 +78,7 @@
 								</p>
 						</div>
 						<div class="instruction-second">
-								<img class="image-instruction-first" src="assets/step2.jpg" alt="">
+								<img class="image-instruction" src="assets/step2.jpg" alt="">
 								<h3 class="margin-top-small">Stap 2</h3>
 								<h4 class="gray-header">Scan de barcode van de test</h4>
 								<p class="margin-top-small">
@@ -88,7 +88,7 @@
 								</p>
 						</div>
 						<div class="instruction-third">
-								<img class="image-instruction-first" src="assets/step3.jpg" alt="">
+								<img class="image-instruction" src="assets/step3.jpg" alt="">
 								<h3 class="margin-top-small">Stap 3</h3>
 								<h4 class="gray-header">Wacht 15 minuten</h4>
 								<p class="margin-top-small">
@@ -98,7 +98,7 @@
 								</p>
 						</div>
 						<div class="instruction-fourth">
-								<img class="image-instruction-first" src="assets/step4.jpg" alt="">
+								<img class="image-instruction" src="assets/step4.jpg" alt="">
 								<h3 class="margin-top-small">Stap 4</h3>
 								<h4 class="gray-header">Maak een foto en ontvang je uitslag & advies</h4>
 								<p class="margin-top-small">
