Talen select verbeterd

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <option value="af">Afrikaans</option>
             <option value="sq">Albanian - shqip</option>
             <option value="am">Amharic - አማርኛ</option>
-            <option value="ar">Arabic - العربية</option>
+            <option value="ar">Arabic - العربي</option>
             <option value="an">Aragonese - aragonés</option>
             <option value="hy">Armenian - հայերեն</option>
             <option value="ast">Asturian - asturianu</option>
@@ -188,7 +188,6 @@
             <option value="yo">Yoruba - Èdè Yorùbá</option>
             <option value="zu">Zulu - isiZulu</option>
         </select>
-        
         </ul>
       </nav>
     </header>
