--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
           <section class="contact">
               <h1>Contact</h1>
               <p class="p-large margin-top">
-                Nog vragen? Schrijf een bericht naar ons!
+                Nog vragen? Stuur een bericht naar ons!
               </p>
           </section>
           <section class="contact-inhoud">
